# abyme

./: .gitignore  Block.gd  Block.tscn  Cargo.toml  ChangeLog.md  Constants.gd  Design.tscn  Director.gd  Director.tscn  Level.gd  Level.tscn  abyme.cabal  broken  engine.cfg  notes  plan  stack.yaml  tiles.tres  tileset_edit.tscn
abyme/: Shape.gd  dummytiles.tres
abyme/images/: empty.png.import  icon.png.import
abyme/src/: Shape.gd
app/: Main.hs
godot/: Game.gd  Game.tscn  Level.tscn  dummytiles.tres  export.cfg  project.godot  tileset_edit.tscn
godot/images/: wall.png.import
godot/maps/: Test1.tscn
godot/src/: Design.gd  Design.tscn  Director.gd  Director.tscn  ParentLink.gd  ParentLink.tscn  Shape.gd  Shape.tscn  Util.gd
haskell-model/: LICENSE  abyme.cabal
haskell-model/app/: Main.hs
haskell-model/src/Abyme/: Direction.hs  Polyomino.hs
haskell-model/src/Abyme/Regiony/: Addressing.hs  Universe.hs
haskell-model/src/Abyme/Regiony/Universe/: Generate.hs  Normalise.hs
haskell-model/src/Abyme/Shapey/: Chunk.hs
haskell-model/src/Abyme/Shapey/Universe/: Validate.hs
old-design-godot/: Constants.gd  Design.tscn  Director.gd
src/: Main.hs  bbox.rs  camera.rs  chunk.rs  defs.rs  delta.rs  director.rs  draw_delta.rs  gameplay_constants.rs  gamestate.rs  graphics_defs.rs  lib.rs  load_universe.rs  main.rs  math.rs  mesh_collector.rs  mesh_gen.rs  polyomino.rs  shape.rs  types.rs  vast2.rs
src/Abyme/: Addressing.hs  Chunk.hs  Direction.hs  Location.hs  Polyomino.hs  Shape.hs  Universe.hs  Util.hs
src/Abyme/Regiony/: Chunk.hs
src/Abyme/Regiony/Universe/: Validate.hs
src/Abyme/Shapey/: Chunk.hs  GameState.hs  Universe.hs
src/Abyme/Shapey/Universe/: Explore.hs  Generate.hs
src/Abyme/Universe/: Explore.hs  Explorer.hs  Generate.hs  Generator.hs  Normalise.hs  Validate.hs  Validator.hs
src/shaders/: shape_150.glslv
test/: GenerateSpec.hs  GeneratorSpec.hs  NormaliseSpec.hs  RegionyGenerateSpec.hs  RegionyNormaliseSpec.hs  RegionyUniverseSpec.hs  ShapeySpec.hs  UniverseSpec.hs
tests/: basic_universe_tests.rs  joined.toml  joined_middle.toml  test1.toml  test2.toml  test3.toml
universe/: joined.toml  minimal.toml  test.toml
