[package]
name = "abyme"
version = "0.1.0"
authors = ["Mitchell Riley <mitchell.v.riley@gmail.com>"]

# [lib]
# name="abyme_lib"

[[bin]]
name = "abyme"
path = "src/main.rs"

[dependencies]
num = "*"
rug = "*"

gfx = "0.16"
gfx_window_glutin = "*"
glutin = "*"

euclid = "*"
lyon = "*"

maplit = "*"
