[package]
name = "abyme"
version = "0.1.0"
authors = ["Mitchell Riley <mitchell.v.riley@gmail.com>"]

# [lib]
# name="abyme_lib"

[[bin]]
name = "abyme"
path = "src/main.rs"

[dependencies]
maplit = "*"
itertools = "*"

num = "*"
rug = "*"

gfx = "0.17"
gfx_core = "*"
gfx_window_glutin = "*"
glutin = "*"

euclid = ">=0.17.2"
lyon = ">=0.10"
