name:                abyme
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Mitchell Riley
maintainer:          mitchell.v.riley@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable abyme
  main-is:             Main.hs

  other-modules:       Abyme.Polyomino 
                     , Abyme.Direction
                     , Abyme.Universe
                     , Abyme.Addressing
                     , Abyme.Chunk
                     , Abyme.Universe.Generator
                     , Abyme.Universe.Explorer
                     , Abyme.Universe.Normalise
                     
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
                     , lens
--                     , transformers
--                     , monad-loops
                     , containers
--                     , text
--                     , vector

                       -- Graphics
                     -- , gl
                     -- , GLFW-b
                     -- , nanovg

                       -- Math
                     , linear
                     -- , geos
                     -- , Hipmunk

  hs-source-dirs:      src
  default-language:    Haskell2010
