name:                abyme
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Mitchell Riley
maintainer:          mitchell.v.riley@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library 
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     Abyme.Util
                     , Abyme.Polyomino 
                     , Abyme.Direction
                     , Abyme.Universe
                     , Abyme.Addressing
                     , Abyme.Chunk
                     , Abyme.Universe.Generator
                     , Abyme.Universe.Explorer
                     , Abyme.Universe.Normalise
                     
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
                     , lens
--                     , transformers
--                     , monad-loops
                     , containers
--                     , text
--                     , vector
                     , QuickCheck

                       -- Graphics
                     -- , gl
                     -- , GLFW-b
                     -- , nanovg

                       -- Math
                     , linear
                     -- , geos
                     -- , Hipmunk

executable abyme-exe
  hs-source-dirs:      app
  default-language:    Haskell2010
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , abyme

test-suite abyme-test
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall
  main-is:              Spec.hs
  other-modules:        UniverseSpec
                      , NormaliseSpec
  build-depends:        base
                      , abyme
                      , hspec
                      , QuickCheck
